' Generated by UML Generator
' Encoded: hLV9Rjim4BtxAtXq6ZlesIY2Pcc104qQP0Dwf2N69aAH1aaPS9TyUsUuYPJa94Lpi67DZ3YFZs-6uy_6KctRHapC4vSRgcb3Aa6DER5MysLhsKMbv2t_oSZ7oPhNZ5HSLu9D9YwAdF8dHdvD29dRtOOjo2sy9LVuF8UlGtHFjspDuPMBUa6uj3FIg9g963eZIqrbtJtk6DKXiAPSx6weXNLhrIu5cv4yom5cgBdP2Bgxa8zgUh0WMyLhDA-OlODGD0L8Vn9afM2hAuzwwHy2DhIqXa7-U_Z6fu1zGHxy3xGvoiuTBFn6Kqrt9grWbQNYMlCguKOhDoULvLkmGKx1g4JZXkuQ9ksjfROrG_Oyk6a9SaOwY3FI1pWZFNX8Om3d2Akeg5e13eSG2KeOmISh9d8UgpMhdYxamFIzjJswJoD8j7icq8meqH88HLD0YjQELNJSHkJe2jIY_HmsKAvwboWkDn19Hcj7CxvndJEToGAyfkyTFPMuswIZCwgzXcJRd2kbCm60eat3ZU5A3WuLNdlNYYYoGu6Cv7wbKAx22ZsAiuNACe8OfXzfnSWbXT_meO34SV5iG1rrAvZpC8bwcjP9YrtUPsxkPSrq7bUSsJD0o9o5Aj8HtC0fKN599LsnS1Y1Mg3Z6pVsKn3OSQpiQ4Sv7cSD8Dg3Ye_JSHKffev9MjTHmjiauOnIpHgrPIcaEEjIbuzSngLETr0vWzYiFY2hgwNMrrAM3rT1ari2Dzcz7wiETna1PH6fVQJd5vh78dRE890RPbijCUghqdjt6ylOjvRnZbQI4eHwiWMjex32qawU_JCzD4hR5230suiPUwThGUDhXgxLEQDOiZRNEPDYaYent8inezer2jeKLoHhO8kvORDMieZGJdrxnUa5aPzddc96YWGpKYplfDpG9nRFv9zkaa8CRpzR8D0twFqqljYgxjrUoqPr1Lik6peOl-3E1zPh961WzIK-3iKg7pesI3nGwO-vedgb7fHec-B6TqS4GU_QxaTolTBUpxetiiiITa6N1cwBofAm7O-oQAEPU0lGhdFciD6GWFk9g0Szp42ngeing2aRVJTNUGf7Uyl_q7XGje52KHd6tXG1SqBdUXHqbRmbuUSnNJcRx3cXD8zv6VgX9Y-qReMtNgw7hrskYF8IsHlKmYcIEB3-02upYYhLm3y5TgUcogvn5Etkm10nKZOXw_uhtVsLcCz_7wTRBqxg7-PpVvFbXXY4OrZnLZaKg2nqw76h3isnjxbEFZ0S7NN9i0SKsMCL7Hs1CP-FCayN_Pd96lvy_GK
' URL: http://www.plantuml.com/plantuml/uml/hLV9Rjim4BtxAtXq6ZlesIY2Pcc104qQP0Dwf2N69aAH1aaPS9TyUsUuYPJa94Lpi67DZ3YFZs-6uy_6KctRHapC4vSRgcb3Aa6DER5MysLhsKMbv2t_oSZ7oPhNZ5HSLu9D9YwAdF8dHdvD29dRtOOjo2sy9LVuF8UlGtHFjspDuPMBUa6uj3FIg9g963eZIqrbtJtk6DKXiAPSx6weXNLhrIu5cv4yom5cgBdP2Bgxa8zgUh0WMyLhDA-OlODGD0L8Vn9afM2hAuzwwHy2DhIqXa7-U_Z6fu1zGHxy3xGvoiuTBFn6Kqrt9grWbQNYMlCguKOhDoULvLkmGKx1g4JZXkuQ9ksjfROrG_Oyk6a9SaOwY3FI1pWZFNX8Om3d2Akeg5e13eSG2KeOmISh9d8UgpMhdYxamFIzjJswJoD8j7icq8meqH88HLD0YjQELNJSHkJe2jIY_HmsKAvwboWkDn19Hcj7CxvndJEToGAyfkyTFPMuswIZCwgzXcJRd2kbCm60eat3ZU5A3WuLNdlNYYYoGu6Cv7wbKAx22ZsAiuNACe8OfXzfnSWbXT_meO34SV5iG1rrAvZpC8bwcjP9YrtUPsxkPSrq7bUSsJD0o9o5Aj8HtC0fKN599LsnS1Y1Mg3Z6pVsKn3OSQpiQ4Sv7cSD8Dg3Ye_JSHKffev9MjTHmjiauOnIpHgrPIcaEEjIbuzSngLETr0vWzYiFY2hgwNMrrAM3rT1ari2Dzcz7wiETna1PH6fVQJd5vh78dRE890RPbijCUghqdjt6ylOjvRnZbQI4eHwiWMjex32qawU_JCzD4hR5230suiPUwThGUDhXgxLEQDOiZRNEPDYaYent8inezer2jeKLoHhO8kvORDMieZGJdrxnUa5aPzddc96YWGpKYplfDpG9nRFv9zkaa8CRpzR8D0twFqqljYgxjrUoqPr1Lik6peOl-3E1zPh961WzIK-3iKg7pesI3nGwO-vedgb7fHec-B6TqS4GU_QxaTolTBUpxetiiiITa6N1cwBofAm7O-oQAEPU0lGhdFciD6GWFk9g0Szp42ngeing2aRVJTNUGf7Uyl_q7XGje52KHd6tXG1SqBdUXHqbRmbuUSnNJcRx3cXD8zv6VgX9Y-qReMtNgw7hrskYF8IsHlKmYcIEB3-02upYYhLm3y5TgUcogvn5Etkm10nKZOXw_uhtVsLcCz_7wTRBqxg7-PpVvFbXXY4OrZnLZaKg2nqw76h3isnjxbEFZ0S7NN9i0SKsMCL7Hs1CP-FCayN_Pd96lvy_GK
' Generated on: 2025-12-18T21:45:26.102056900

@startuml
skinparam classAttributeIconSize 0
hide circle

class Bike {
  -type: String
  --
  +Bike(vehicleId: int, model: String, brand: String, year: int, dailyRate: double, type: String)
  +displayInfo(): void
  +getType(): String
}

class Booking {
  -bookingId: int
  -user: User
  -vehicle: Vehicle
  -startDate: Date
  -days: int
  -totalPrice: double
  -isActive: boolean
  -paymentStatus: String
  --
  +Booking(bookingId: int, user: User, vehicle: Vehicle, startDate: Date, days: int)
  +calculatePrice(): double
  +cancel(): void
  +checkIn(): void
  +checkOut(): void
  +getBookingId(): int
  +getUser(): User
  +getVehicle(): Vehicle
  +getStartDate(): Date
  +getDays(): int
  +getTotalPrice(): double
  +isActive(): boolean
  +getPaymentStatus(): String
  +setPaymentStatus(paymentStatus: String): void
}

class Car {
  -numDoors: int
  -transmission: String
  --
  +Car(vehicleId: int, model: String, brand: String, year: int, dailyRate: double, numDoors: int, transmission: String)
  +displayInfo(): void
  +getNumDoors(): int
  +getTransmission(): String
}

interface Maintainable {
  ~scheduleMaintenance(date: Date): void
  ~isUnderMaintenance(): boolean
  ~getMaintenanceDate(): Date
}

class RentalManager {
  -vehicles: List<Vehicle>
  -users: List<User>
  -bookings: List<Booking>
  --
  +RentalManager()
  +addVehicle(v: Vehicle): void
  +removeVehicle(vehicleId: int): boolean
  +findVehicleById(vehicleId: int): Vehicle
  +addUser(u: User): void
  +findUserById(userId: int): User
  +bookVehicle(userId: int, vehicleId: int, startDate: Date, days: int): Booking
  +getReturnDateForVehicle(vehicleId: int): Date
  +cancelBooking(bookingId: int): boolean
  +displayAvailableVehicles(): List<Vehicle>
  +sortVehicles(list: List<Vehicle>): List<Vehicle>
  +getVehicles(): List<Vehicle>
  +getUsers(): List<User>
  +getBookings(): List<Booking>
}

class User {
  -userId: int
  -name: String
  -email: String
  -phone: String
  -rentals: List<Booking>
  --
  +User(userId: int, name: String, email: String, phone: String)
  +makeBooking(vehicle: Vehicle, startDate: Date, days: int): Booking
  +cancelBooking(bookingId: int): boolean
  +getActiveBookings(): List<Booking>
  +displayInfo(): void
  +getUserId(): int
  +getName(): String
  +getEmail(): String
  +getPhone(): String
  +getRentals(): List<Booking>
  +toString(): String
}

class Van {
  -cargoVolume: double
  --
  +Van(vehicleId: int, model: String, brand: String, year: int, dailyRate: double, cargoVolume: double)
  +displayInfo(): void
  +getCargoVolume(): double
}

abstract class Vehicle {
  -vehicleId: int
  -model: String
  -brand: String
  -year: int
  -dailyRate: double
  -isAvailable: boolean
  -maintenanceDate: Date
  --
  +Vehicle(vehicleId: int, model: String, brand: String, year: int, dailyRate: double)
  +getVehicleId(): int
  +isAvailable(): boolean
  +setAvailable(flag: boolean): void
  +getDailyRate(): double
  +displayInfo(): void
  +calculateRentalPrice(days: int): double
  +scheduleMaintenance(date: Date): void
  +isUnderMaintenance(): boolean
  +getModel(): String
  +getBrand(): String
  +getYear(): int
  +compareTo(other: Vehicle): int
  +toString(): String
  +getMaintenanceDate(): Date
}

Bike --|> Vehicle
Booking *-- User
Booking *-- Vehicle
Car --|> Vehicle
RentalManager o-- Vehicle
RentalManager o-- User
RentalManager o-- Booking
User o-- Booking
User ..> Vehicle
Van --|> Vehicle
Vehicle ..|> Maintainable
Vehicle ..> Vehicle
@enduml